@@ -2473,7 +2473,7 @@ fail:
 
 /******************************************************************************
  *                                                                            *
- * Function: cache_expression_hostids                                         *
+ * Function: cache_trigger_hostids                                            *
  *                                                                            *
  * Purpose: cache host identifiers referenced by trigger expression           *
  *                                                                            *
@@ -2491,6 +2491,32 @@ static void	cache_trigger_hostids(zbx_vector_uint64_t *hostids, const char *expr
 		get_functionids(&functionids, expression);
 		DCget_functions_hostids(hostids, &functionids);
 		zbx_vector_uint64_destroy(&functionids);
+	}
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: cache_item_hostid                                                *
+ *                                                                            *
+ * Purpose: cache host identifier referenced by an item or a lld-rule         *
+ *                                                                            *
+ * Parameters: hostids - [OUT] the host identifier cache                      *
+ *             itemid  - [IN]  the item identifier                            *
+ *                                                                            *
+ ******************************************************************************/
+static void	cache_item_hostid(zbx_vector_uint64_t *hostids, zbx_uint64_t itemid)
+{
+	if (0 == hostids->values_num)
+	{
+		DC_ITEM	item;
+		int	errcode;
+
+		DCconfig_get_items_by_itemids(&item, &itemid, &errcode, 1);
+
+		if (SUCCEED == errcode)
+			zbx_vector_uint64_append(hostids, item.host.hostid);
+
+		DCconfig_clean_items(&item, &errcode, 1);
 	}
 }
 
@@ -2571,7 +2597,12 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 
 			if (EVENT_SOURCE_TRIGGERS == c_event->source)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					cache_trigger_hostids(&hostids, c_event->trigger.expression);
+					DCget_user_macro(hostids.values, hostids.values_num, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
@@ -2820,7 +2851,12 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 			}
 			else if (EVENT_SOURCE_INTERNAL == c_event->source && EVENT_OBJECT_TRIGGER == c_event->object)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					cache_trigger_hostids(&hostids, c_event->trigger.expression);
+					DCget_user_macro(hostids.values, hostids.values_num, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
@@ -2991,7 +3027,11 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 			}
 			else if (EVENT_SOURCE_DISCOVERY == c_event->source)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					DCget_user_macro(NULL, 0, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
@@ -3118,7 +3158,11 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 			}
 			else if (EVENT_SOURCE_AUTO_REGISTRATION == c_event->source)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					DCget_user_macro(NULL, 0, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
@@ -3196,7 +3240,12 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 			}
 			else if (EVENT_SOURCE_INTERNAL == c_event->source && EVENT_OBJECT_ITEM == c_event->object)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					cache_item_hostid(&hostids, c_event->objectid);
+					DCget_user_macro(hostids.values, hostids.values_num, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
@@ -3306,7 +3355,12 @@ int	substitute_simple_macros(zbx_uint64_t *actionid, const DB_EVENT *event, DB_E
 			}
 			else if (EVENT_SOURCE_INTERNAL == c_event->source && EVENT_OBJECT_LLDRULE == c_event->object)
 			{
-				if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
+				if (0 == strncmp(m, "{$", 2))	/* user defined macros */
+				{
+					cache_item_hostid(&hostids, c_event->objectid);
+					DCget_user_macro(hostids.values, hostids.values_num, m, &replace_to);
+				}
+				else if (0 == strncmp(m, MVAR_ACTION, sizeof(MVAR_ACTION) - 1))
 				{
 					ret = get_action_value(m, *actionid, &replace_to);
 				}
