@@ -2,6 +2,7 @@
 Changes for 2.3.0
 
 New features:
+........S. [ZBXNEXT-751] added support of user macros in the notifications and commands (Nikolaj)
 A.F....... [ZBXNEXT-2123] implemented the application and host inventory filters on the trigger monitoring page (Pavels)
 A.F.I...S. [ZBXNEXT-2117] added support of the new "Description" field for templates, hosts and proxies (Eduard, Sasha)
 ..F.I..... [ZBXNEXT-1533] added "Action name" in "History of actions" screen and added patch to changed screen item sort order (Oleg, Pavels)
